# gke-terraform-generator

./: .bazelrc  .gitignore  BUILD.bazel  Jenkinsfile  Makefile  OWNERS  README.md  WORKSPACE  data.yml  doc.go  go.mod  go.sum  main.go  status.sh
anthos/: anthos-rbac-psp.yaml  create-anthos.sh  delete-anthos.sh
anthos/anthos-config-example/cluster/: namespace-reader-clusterrole.yaml  namespace-reader-clusterrolebinding.yaml  pod-creator-clusterrole.yaml  pod-security-policy.yaml
anthos/anthos-config-example/namespaces/: sre-rolebinding.yaml  sre-supported-selector.yaml  viewers-rolebinding.yaml
anthos/anthos-config-example/namespaces/audit/: namespace.yaml
anthos/anthos-config-example/namespaces/online/shipping-app-backend/: pod-creator-rolebinding.yaml  quota.yaml
anthos/anthos-config-example/namespaces/online/shipping-app-backend/shipping-dev/: job-creator-role.yaml  job-creator-rolebinding.yaml  namespace.yaml  quota.yaml
anthos/anthos-config-example/namespaces/online/shipping-app-backend/shipping-prod/: namespace.yaml
anthos/anthos-config-example/namespaces/online/shipping-app-backend/shipping-staging/: namespace.yaml
anthos/anthos-config-example/system/: config-management.yaml  resourcequota-hierarchy.yaml
cmd/: BUILD.bazel  cmd.go  doc.go  gen.go  version.go
examples/: BUILD.bazel  brad.yaml  example.yaml  full.yaml  min-example.yaml  public-example.yaml  test-data.yaml
generator/: flagparser.go  generator.go
holistic-demo/binary-auth/: README.md  nginx-breakglass.yaml  nginx.yaml
holistic-demo/logging-sinks/: README.md  teardown.sh
holistic-demo/logging-sinks/terraform/: main.tf
holistic-demo/monitoring/: README.md
holistic-demo/rbac/pod-labeler/: Dockerfile  cloudbuild.yaml
pkg/analyzer/: BUILD.bazel  importunsafe.go
pkg/api/: BUILD.bazel  api.go  api_test.go  default_values.go  default_values_test.go  doc.go  validate.go  validate_test.go
pkg/api/testdata/: BUILD.bazel  example.yaml  min-example.yaml
pkg/files/: BUILD.bazel  dir.go  is-directory.go  is-file.go  is-writable.go  is-writeable-directory.go  is-writeable_windows.go
pkg/templates/: BUILD.bazel  templates.go  templates_test.go
pkg/templates/testdata/: BUILD.bazel  tf_wrapper.sh
pkg/terraform/: BUILD.bazel  gke-main.tf  gke-network.tf  gke-outputs.tf  main.tf.tmpl  variables.tf  variables.tf.tmpl
pkg/terraform/cft/: BUILD.bazel  kms.tf.tmpl  main.tf.tmpl  outputs.tf.tmpl
pkg/terraform/vanilla/: BUILD.bazel  bastion.tf.tmpl  kms.tf.tmpl  main.tf.tmpl  network.tf.tmpl  outputs.tf.tmpl  variables.tf.tmpl
pkg/version/: BUILD.bazel  version.go
templates/: data.tfvars  gke-network.tf  gke-serviceaccount.tf  templates.go
test/: make.sh
