load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix  partner-code.googlesource.com/gke-terraform-generator
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "partner-code.googlesource.com/gke-terraform-generator",
    visibility = ["//visibility:private"],
    deps = ["//cmd:go_default_library"],
)

go_binary(
    name = "gke-tf",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
