# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "nogo")
load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

nogo(
    name = "my_nogo",
    deps = [
        # analyzer from the local repository
        ":importunsafe",
    ],
    visibility = ["//visibility:public"],  # must have public visibility
    vet = True,
)

go_tool_library(
    name = "importunsafe",
    srcs = ["importunsafe.go"],
    importpath = "importunsafe",
    deps = ["@org_golang_x_tools//go/analysis:go_tool_library"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    srcs = ["importunsafe.go"],
    importpath = "github.com/GoogleCloudPlatform/gke-terraform-generator/pkg/analyzer",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_tools//go/analysis:go_default_library"],
)
