# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_embed_data", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["templates.go"],
    importpath = "github.com/GoogleCloudPlatform/gke-terraform-generator/pkg/templates",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/terraform/cft:go_default_library",  #keep
        "//pkg/terraform/vanilla:go_default_library",  #keep
        "@io_k8s_klog//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["templates_test.go"],
    data = [
        "//examples:yaml",
        #"@terraform//:binary", # Not working
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/terraform/cft:go_default_library",
    ],
)
