# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Consuming the above md5_sum rule directly into the data deps of a sh_test results in the
# files just not appearing, and the dependancy not triggering.
# If we wrap it in a filegroup first however it just works.
filegroup(
    name = "test_yaml",
    testonly = True,
    srcs = ["example.yaml","min-example.yaml"],
    visibility = ["//visibility:public"],
)
