# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# gazelle:ignore

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_go//go:def.bzl", "go_embed_data", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        ":gke_variables",
        ":gke_outputs",
        ":gke_network",
        ":gke_main",
        ],
    importpath = "github.com/GoogleCloudPlatform/gke-terraform-generator/pkg/terraform/cft",
    visibility = ["//visibility:public"],
)

go_embed_data(
    name = "gke_network",
    src = ":network.tf.tmpl",
    package = "cft",
    string = True,
    var = "GKENetworkTF",
)

go_embed_data(
    name = "gke_outputs",
    src = ":outputs.tf.tmpl",
    package = "cft",
    string = True,
    var = "GKEOutputsTF",
)

go_embed_data(
    name = "gke_variables",
    src = ":variables.tf.tmpl",
    package = "cft",
    string = True,
    var = "GKEVariablesTF",
)

go_embed_data(
    name = "gke_main",
    src = ":main.tf.tmpl",
    package = "cft",
    string = True,
    var = "GKEMainTF",
)
